<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.sirmathhman</groupId>
	<artifactId>magma</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<!-- Set to installed Java major version (detected with the java version command) -->
		<java.version>24</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<!-- JUnit 5 -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>

			<!-- Checkstyle plugin with no default rules -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<configLocation>config/checkstyle/checkstyle.xml</configLocation>
					<encoding>${project.build.sourceEncoding}</encoding>
					<consoleOutput>true</consoleOutput>
					<failOnViolation>true</failOnViolation>
				</configuration>
				<executions>
					<execution>
						<id>checkstyle-check</id>
						<phase>test</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.19.0</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<minimumTokens>40</minimumTokens>
					<failOnViolation>true</failOnViolation>
					<ignoreIdentifiers>true</ignoreIdentifiers>
					<ignoreLiterals>true</ignoreLiterals>
				</configuration>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>cpd-check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
		</plugins>
	</build>

</project>